--- a/config/routes/eltharin_reloadablefieldsbundele_routes.yaml
+++ b/config/routes/eltharin_reloadablefieldsbundele_routes.yaml
@@ -1,4 +1,4 @@
 eltharin_reloadablefields_endpoint:
-  path:       /ajax/reload/{type}/{entitytype}/{field}
+  path:       /ajax/reload/{type}/{options}/{field}
   controller: Eltharin\ReloadableFieldBundle\Controller\ReloadFieldController::reload
   methods:    GET
