--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,5 +12,5 @@ services:
     autowire: yes
     autoconfigure: yes
     resource: '../src/Controller'
-    arguments:    [ "@form.factory", "@twig", "@Doctrine\\ORM\\EntityManagerInterface"]
+    arguments:    [ "@form.factory", "@twig", "@Doctrine\\ORM\\EntityManagerInterface", "@Symfony\\Component\\HttpFoundation\\RequestStack"]
     tags: ['controller.service_arguments']
